[gd_scene load_steps=2 format=3 uid="uid://ds2u0ft6dbrl1"]

[ext_resource type="Script" uid="uid://bfnfabrx4dtpn" path="res://scenes/menus.gd" id="1_l6cm7"]

[node name="Menus" type="CanvasLayer"]
script = ExtResource("1_l6cm7")

[node name="MainMenu" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.396078, 0.721569, 0.647059)

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.269
anchor_top = 0.014
anchor_right = 0.674
anchor_bottom = 0.219
offset_left = 66.112
offset_top = -1.072
offset_right = -0.447998
offset_bottom = 9.088
grow_horizontal = 2
theme_override_font_sizes/bold_italics_font_size = 3
theme_override_font_sizes/italics_font_size = 6
theme_override_font_sizes/mono_font_size = 5
theme_override_font_sizes/normal_font_size = 100
text = "SUPCITY"

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="New Game" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Load Game" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="SaveGame" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="ResetData" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Reset Data"

[node name="Exit" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MainMenu/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Load Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/ResetData" to="." method="_on_reset_data_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
